Correct padding-left misalignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,7 @@
 body{
     background: linear-gradient(to right, rgba(230, 234, 175, 0.931),rgba(238, 252, 47, 0.5));
-    text-align: justify;
+    text-align: center;
     font-family: 'Roboto', sans-serif;
-}
-
-ul li{
-    list-style: none;
-    padding: 10px;
-    display: inline-flex;
 }
 
 header {
@@ -28,6 +22,16 @@ h3 {
     font-style: italic;
     text-decoration: underline;
 }
+
+ul li{
+    list-style: none;
+    padding: 10px;
+    display: inline-flex;
+}
+
+#main-menu {
+    margin-left: -40px;
+ }
 
 ol {
     text-align: left;
